refactor(bk): Compatible with java1.8